# airport-information-monitoring-and-management-system

./: CMakeLists.txt  Exception.cpp  Exception.h  StartWindow.cpp  StartWindow.h  StartWindow.ui  cargoarrivedflightsadddialog.cpp  cargoarrivedflightsadddialog.h  cargoarrivedflightsadddialog.ui  cargodialog.cpp  cargodialog.h  cargodialog.ui  clases.cpp  clases.h  crewregdialog.cpp  crewregdialog.h  crewregdialog.ui  departedcargoflightsadddialog.cpp  departedcargoflightsadddialog.h  departedcargoflightsadddialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  passengerarrivedflightsadddialog.cpp  passengerarrivedflightsadddialog.h  passengerdepartedflightsadddialog.cpp  passengerdepartedflightsadddialog.h  passengerdepartedflightsadddialog.ui  passengerflightsadddialog.ui  passengerregwindow.cpp  passengerregwindow.h  passengerregwindow.ui  pilotsregdialog.cpp  pilotsregdialog.h  pilotsregdialog.ui  regestrationdialog.cpp  regestrationdialog.h  regestrationdialog.ui
Resources/: icon.icns
